--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,15 +1,16 @@
+@import "../vendor/bootstrap/css/bootstrap.min.css";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
 
 body {
   background-color: #fafafa;
 }
 
-.project {
+a {
   text-decoration: none;
   color: inherit;
 }
 
-.project:hover .card {
+.project:hover {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
